--- a/contact/index.html
+++ b/contact/index.html
@@ -28,8 +28,10 @@
       </ul>
     </nav>
   </header>
-  <h1>Contact</h1>
-  <img src="../images/hand-bird.svg" alt="image of hands clasped to make a bird" />
+  <main>
+    <h1>Contact</h1>
+    <img src="../images/hand-bird.svg" alt="image of hands clasped to make a bird" />
+  </main>
 </body>
 
 </html>
