--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       <h2>What is the real name?</h2>
       <p>The peafowl, also known as the peacock, is a common name for <em>three</em> bird species in the genera Pavo and
         Afropavo
-        within the tribe Pavonini of the family Phasianidae, the pheasants and their allies.</p> <a class="button">Learn
+        within the tribe Pavonini of the family Phasianidae, the pheasants and their allies.</p> <a
+        href="contact/">Learn
         More</a>
     </article>
     <article>
@@ -77,11 +78,13 @@
     <aside>
       <p>Peacocks are large, colorful pheasants (typically blue and green) known for their iridescent tails. These tail
         feathers, or coverts, spread out in a distinctive train that is more than 60% of the bird’s total body length
-        and boast colorful “eye” markings of blue, gold, red, and other hues.</p> <a class="button">Continue Reading</a>
+        and boast colorful “eye” markings of blue, gold, red, and other hues. </p>
+      <p><a href="about/">Continue
+          Reading</a></p>
 
-      <svg>
+      <!-- <svg>
         <use href="#bear" />
-      </svg>
+      </svg> -->
 
     </aside>
     <footer>
