--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <nav>
       <ul>
         <li><a>Home</a></li>
-        <li><a href="about/">About</a></li>
-        <li><a href="contact/">Contact</a></li>
+        <li><a href="about/" id="list">About</a></li>
+        <li><a href="contact/" id="listtwo">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -59,8 +59,8 @@
       <h2>What is the real name?</h2>
       <p>The peafowl, also known as the peacock, is a common name for <em>three</em> bird species in the genera Pavo and
         Afropavo
-        within the tribe Pavonini of the family Phasianidae, the pheasants and their allies.</p> <a
-        href="contact/">Learn
+        within the tribe Pavonini of the family Phasianidae, the pheasants and their allies.</p> <a href="contact/"
+        class="button">Learn
         More</a>
     </article>
     <article>
@@ -79,7 +79,7 @@
       <p>Peacocks are large, colorful pheasants (typically blue and green) known for their iridescent tails. These tail
         feathers, or coverts, spread out in a distinctive train that is more than 60% of the bird’s total body length
         and boast colorful “eye” markings of blue, gold, red, and other hues. </p>
-      <p><a href="about/">Continue
+      <p><a href="about/" class="button">Continue
           Reading</a></p>
 
       <!-- <svg>
