--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <nav>
       <ul>
         <li><a>Home</a></li>
-        <li><a href="about/" id="list">About</a></li>
-        <li><a href="contact/" id="listtwo">Contact</a></li>
+        <li><a href="about/">About</a></li>
+        <li><a href="contact/">Contact</a></li>
       </ul>
     </nav>
   </header>
